# four-wheel-differential-car-ros

./: .gitignore  README.md
carmodel_description/: CMakeLists.txt  package.xml
carmodel_description/config/: diffdrive.yaml  fake_carmodel_arbotix.yaml
carmodel_description/launch/: 02-drive.launch
carmodel_description/maps/: blank_map.yaml
carmodel_description/maps/mymap1/: model.config  model.sdf
carmodel_description/maps/mymap2/: model.config  model.sdf
carmodel_description/maps/mymap3/: model.config  model.sdf
carmodel_description/maps/mymap4/: model.config  model.sdf
carmodel_description/maps/mymap5/: model.config  model.sdf
carmodel_description/maps/mymap6/: model.config  model.sdf
carmodel_description/meshes/: Body.STL  Bodys.STL  Wheel.STL
carmodel_description/src/: car_state_publisher.cpp  move.cpp
carmodel_description/urdf/: carmodel2.urdf  carmodel2.urdf.xacro
carmodel_description/world/: mymap1.world  mymap3.world  mymap4.world  mymap5.world  mymap6.world
carmodel_nav/: CMakeLists.txt  nav.rviz  package.xml
carmodel_nav/config/: amcl.rviz  base_local_planner_params.yaml  costmap_common_params.yaml
carmodel_nav/launch/: fake_amcl.launch  fake_carmodel.launch  move_base.launch  nav_mymap_demo.launch
carmodel_nav/maps/: mymap5.pgm  mymap5.yaml
carmodel_slam/: CMakeLists.txt  carmodel_gmapping.rviz  package.xml
carmodel_slam/launch/: carmodel_slam.launch
carmodel_teleop/: CMakeLists.txt  package.xml
carmodel_teleop/launch/: carmodel_teleop_key.launch
carmodel_voice/: CMakeLists.txt  package.xml  readme.txt
(+3 files in other folders)
